test/sema/cast-ptr-to-immutable-into-ptr-to-mutable.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(const void& v) {
    // CHECK: [[@LINE+1]]:13: error: illegal cast from 'const void&' to 'int&'
    var p = cast<int&>(v);
}
